
              pamstretch: Don't mess with edge when scale factor is 1,
              regardless of -dropedge and -blackedge.

              ppmwheel: Add -huevalue, -huesaturation, -maxval .

              various: Fix unnormalizing code so a value exactly between two
              sample values rounds consistently up.  Affects many programs.

              pnmtopng: fix bug: -interlace ignored.  Broken in 10.55
              (June 2011).

              pamstretch: Reject very large scale factors instead of producing
              incorrect output.

              ppmbrighten: Fix crash with -normalize when there is only one
              intensity in the image.  Always broken - Ppmbrighten was new in
              the first Netpbm release in 1991.

              ppmdraw: Fix bug: 'setlinetype nodiag' says invalid type.
              Always broken.  (Ppmdraw was new in Netpbm 10.29 (August 2005)).

              Build: split link/ directory in package tree into staticlink/
              and sharedlink/ .  Make 'installnetpbm' do separate prompts to
              install static libraries and shared library stubs.  Make
              'installnetpbm' install clean symlink in the usual case that the
              shared library stub and shared library are in the same
              directory.

18.12.29 BJH  Release 10.85.00

              pnmpaste: Add -nand, -nor, and -nxor.

              pamcut: add -cropleft, -cropright, -croptop, -cropbottom.

              ppmtobmp: respect -bpp with PBM input.

              bmptopnm: allow single color colormap with bpp 1.

              bmptopnm: validate plane count = 1.

              bmptopnm: Add RLE4 compression decoding.  This was ostensibly
              added in Netpbm 10.32 (February 2006), but never worked.
              
              Add pammixmulti.  Thanks Scott Pakin (scott+pbm@pakin.org).

              pamtotga: Add -cmap16 .
    
              pamtris: Add -rgb, -grayscale.  Add w parameter to vertex