@@ -38,6 +38,9 @@ not yet  BJH  Release 10.86.00
               various: Fix unnormalizing code so a value exactly between two
               sample values rounds consistently up.  Affects many programs.
 
+              pamtopng: Fix buffer overrun.  Always broken (Pamtopng was new
+              in Netpbm 10.71 (June 2015).
+
               pnmtopng: fix bug: -interlace ignored.  Broken in 10.55
               (June 2011).
 
